--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -7,8 +7,8 @@
     <h2 th:text="#{welcome}">Hello</h2>
     <div class="row">
         <div class="col-md-12">
-          <h1>Hi Ray This is DevOps test_porject complete thanks~~~~ :)</h1>
-          <h1>OMG Today is 10/19</h1>
+          <h1>Hi Ray This is DevOps test_porject </h1>
+          <h1>OMG Today is 10/19 PM3:11</h1>
           <h2>Release Version: <span th:text="${appVersion}"></span></h2>
           <img class="img-responsive" src="../static/resources/images/pets.png" th:src="@{/resources/images/pets.png}"/>
         </div>
